# MIL

./: .gitignore  attention_based.py  main.ipynb  main.py  pyproject.toml  requirements.txt  teste.ipynb  teste_ip_isp.ipynb
data/: embedding_service.py
models/facebook/fasttext/: attention_mil_bundle.pth
models/google/fasttext/: attention_mil_bundle.pth
models/kwai/fasttext/: attention_mil_bundle.pth
models/taboola/fasttext/: attention_mil_bundle.pth
models/tiktok/fasttext/: attention_mil.pth  attention_mil_bundle.pth
nlp/: word2v.py
tokenization/: http_tokens.py  http_tokens_ft.py  http_tokens_v2.py  teste_ua.py
tokenization/google/: http_tokens.py  player.php
tokenization/tiktok/: index.php
training_models/config/: container.py  database.py  mongo.py
training_models/repositories/: campaigns_repository.py  request_repository.py
training_models/services/: campaign_service.py  fasttext_service.py  request_service.py  training_service.py
