[project]
name = "mil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncio>=4.0.0",
    "datasets>=4.5.0",
    "gensim>=4.4.0",
    "hdbscan>=0.8.41",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "motor>=3.7.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "umap-learn>=0.5.11",
    "user-agents>=2.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true